# Transcript

./: .gitignore  CMakeLists.txt  README.md
cmake/: keccak.cmake  rand.cmake
include/builder/: constant.h  rng.h  rng_builder.h  transcript.h
include/strobe/: constant.h  strobe_128.h
include/transcript/: constant.h  rng.h  rng_builder.h  transcript.h
include/util/: bit.h  encode.h  random.h
include/utils/: encode.h  state.h
src/builder/: rng.cpp  rng_builder.cpp  transcript.cpp
src/strobe/: strobe_128.cpp
src/transcript/: rng.cpp  rng_builder.cpp  transcript.cpp
test/: CMakeLists.txt  test_builder.cpp  test_strobe.cpp  test_transcript.cpp  test_util.cpp
